# rust-graphql-test

./: Cargo.toml
src/: graphql_schema.rs  main.rs
