[package]
name = "rust-graphql-test"
version = "0.1.0"
authors = ["Swann <swann@devloup.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
juniper = "0.14.2"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
